tests/escript/scripts/escript_invalid_import_2.py.out
Error in script: At line 4, Syntax Error: import of 'math' not allowed
