tests/escript/scripts/escript_invalid_import_2.py
# python3;failure

import math